used for lesson 6
